--- a/app/views/reports/age_and_ethnicity.html.erb
+++ b/app/views/reports/age_and_ethnicity.html.erb
@@ -5,7 +5,7 @@
   <%= form_for @query, :url=>url_for(:action=>:age_and_ethnicity), :html=>{:method=>:get} do |f| %>
     <fieldset class="select-month">
       <p>
-        <%= f.date_select  :start_date, :order => [:month,:year] %>
+        <%= f.date_select  :start_date, :order => [:month,:year] rescue nil%>
         <%= f.submit translate_helper("report") %>
       </p>
     </fieldset>
