--- a/app/views/reports/customer_receiving_trips_in_range.html.erb
+++ b/app/views/reports/customer_receiving_trips_in_range.html.erb
@@ -8,9 +8,9 @@
   <%= form_for @query, :url=>url_for(:action=>:customer_receiving_trips_in_range), :html=>{:method=>:get} do |f| %>
     <fieldset class="select-month">
       <p>
-        <%= f.date_select  :start_date, :order => [:month,:day,:year] %>
+        <%= f.date_select  :start_date, :order => [:month,:day,:year] rescue nil%>
         <%= translate_helper("crtr_through")%> 
-        <%= f.date_select  :before_end_date, :order => [:month,:day,:year] %>
+        <%= f.date_select  :before_end_date, :order => [:month,:day,:year] rescue nil%>
         <%= f.submit translate_helper("update") %>
       </p>
     </fieldset>
