--- a/app/views/reports/forms/_daily_manifest_by_half_hour_with_cab.html.erb
+++ b/app/views/reports/forms/_daily_manifest_by_half_hour_with_cab.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @driver_query, :url=>url_for(:action=>:daily_manifest_by_half_hour_with_cab), :html=>{:method=>:get} do |f| %>
   <fieldset>
-    <%= f.date_select  :start_date %>
+    <%= f.date_select  :start_date rescue nil%>
     <%= f.collection_select :driver_id, @drivers, :id, :name %>
     <%= f.submit translate_helper("show") %>
   </fieldset>
