--- a/app/views/reports/show_runs_for_verification.html.erb
+++ b/app/views/reports/show_runs_for_verification.html.erb
@@ -8,9 +8,9 @@
   <%= form_for @query, :url=>url_for(:action=>:show_runs_for_verification), :html=>{:method=>:get} do |f| %>
     <fieldset class="select-month">
       <p>
-        <%= f.date_select  :start_date, :order => [:month,:day,:year] %>
+        <%= f.date_select  :start_date, :order => [:month,:day,:year] rescue nil%>
         <%= translate_helper("through") %> 
-        <%= f.date_select  :before_end_date, :order => [:month,:day,:year] %>
+        <%= f.date_select  :before_end_date, :order => [:month,:day,:year] rescue nil%>
         <%= f.submit translate_helper(:update) %>
       </p>
     </fieldset>
