--- a/app/views/reports/vehicles_monthly.html.erb
+++ b/app/views/reports/vehicles_monthly.html.erb
@@ -5,7 +5,7 @@
 <%= form_for @query, :url=>url_for(:action=>:vehicles_monthly), :html=>{:method=>:get} do |f| %>
   <fieldset class="select-month">
     <p>
-      <%= f.date_select  :start_date, :order => [:month,:year] %>
+      <%= f.date_select  :start_date, :order => [:month,:year] rescue nil%>
       <%= f.submit translate_helper("vehicle_operations_submit") %>
     </p>
   </fieldset>
