[#100023114] Display flag message on customer profile when message field is filled, the message will only go away when message field gets emptied

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -45,7 +45,7 @@
     <%#= render 'eligibility_panel', f: f  if !is_group %>
     <%= render 'providers_panel', f: f %>
     <%#= render 'donations_panel', f: f %>
-    <%#= render 'others_panel', f: f %>
+    <%= render 'others_panel', f: f %>
   </div>
 
 <% end %>
