--- a/app/views/trips/_customer.html.erb
+++ b/app/views/trips/_customer.html.erb
@@ -6,7 +6,7 @@
     <% end %>
   </div>
 <% end %>
-<%= autocomplete_field_tag 'customer_name', @customer.try(:name), autocomplete_customers_path, 
+<%= autocomplete_field_tag 'customer_name', @customer.try(:name), autocomplete_customers_path(active_only: true), 
     :size => 30, 
     :update_elements => {
       :id                        => '#trip_customer_id,#trip_customer_attributes_id',
