--- a/app/views/customers/_customer_listing.html.erb
+++ b/app/views/customers/_customer_listing.html.erb
@@ -9,7 +9,7 @@
       <th><%=translate_helper("email")%></th>
       <th><%=translate_helper("customer_active")%></th>
       <th><%=translate_helper("activated_date")%></th>
-      <% if @show_inactivated_date %>
+      <% if !@active_only %>
       <th><%=translate_helper("inactivated_date")%></th>
       <% end %>
     </tr>
@@ -25,7 +25,7 @@
       <td><%= customer.email %></td>
       <td><%= image_tag("tick-circle.png") if customer.active? %></td>
       <td><%= customer.activated_date %></td>
-      <% if @show_inactivated_date %>
+      <% if !@active_only %>
       <td><%= customer.inactivated_date %></td>
       <% end %>
     </tr>
