Remove extra characters on New Maintenance Event Dialog [#103541650]

--- a/app/views/vehicle_maintenance_events/_form.html.erb
+++ b/app/views/vehicle_maintenance_events/_form.html.erb
@@ -76,7 +76,7 @@
           <div class="form-group">
             <%= f.label :services_performed, translate_helper("services_performed"), class: "col-md-3 control-label" %>
             <div class="col-md-9">
-              <%= f.text_area :services_performed, class: "form-control", rows: 3 %> %>
+              <%= f.text_area :services_performed, class: "form-control", rows: 3 %>
             </div>
           </div>
         </div><!-- END .panel-body -->
