--- a/app/views/trips/_other_panel.html.haml
+++ b/app/views/trips/_other_panel.html.haml
@@ -19,9 +19,9 @@
 
     .form-group.col-sm-12.donation
       .col-sm-3
-        = f.label :donation, translate_helper("trip_donation")
+        = f.label :customer_donation, translate_helper("trip_donation")
       .col-sm-6.col-md-3
-        = f.text_field :donation, :size => 8, class: 'form-control'
+        = number_field_tag :customer_donation, nil, min: 0, step: 0.01, :size => 8, class: 'form-control', value: params[:customer_donation] || @trip.donation.try(:amount)
 
     .form-group.col-sm-12
       .col-sm-3
