Finish donation editing on customer page

--- a/app/views/customers/_add_donation_dialog.html.haml
+++ b/app/views/customers/_add_donation_dialog.html.haml
@@ -9,7 +9,7 @@
               = translate_helper(:cancel)
           .modal-title{:style => "text-align:left;"}
             %strong
-              = translate_helper(:add_donation)
+              = translate_helper(:add_donation_dialog_title)
         .modal-body.row{:style => "text-align:left;"}
           .form-group.col-sm-12
             .col-sm-3
