--- a/app/views/customers/_donations_panel.html.haml
+++ b/app/views/customers/_donations_panel.html.haml
@@ -25,7 +25,7 @@
                 = button_tag :type => 'button', class: 'deleteCustomerDonation btn-danger' do 
                   = translate_helper(:delete)
             %td
-              = donation.date.to_date.to_s if donation.date
+              = format_time_for_listing_day donation.date if donation.date
             %td
               = donation.amount
             %td
@@ -49,7 +49,7 @@
     });
 
     function insertDonationRow(donationData) {
-      $('#customerDonationsTable').append("<tr data-address='" + JSON.stringify(donationData) + "'>" +
+      $('#customerDonationsTable').append("<tr data-donation='" + JSON.stringify(donationData) + "'>" +
           '<td><button class="deleteCustomerDonation btn-danger" name="button" type="button">Delete</button></td>' +
           "<td>" + donationData.date + '</td>' +
           "<td>" + donationData.amount + "</td>" +
@@ -58,9 +58,15 @@
     }
 
     $('#addDonationDialog form').submit(function() {
+      var donationData = {
+        date: $('#donation_date').val(),
+        amount: $('#donation_amount').val(),
+        notes: $('#donation_notes').val()
 
-      //TODO: insert donation
+      };
+      //insert new donation row
       $('#addDonationDialog').modal('hide');
+      insertDonationRow(donationData);
 
       return false; //no http submission
     });
