--- a/app/views/reports/donations.html.erb
+++ b/app/views/reports/donations.html.erb
@@ -20,7 +20,7 @@
 <% for customer in @customers %>
 <tr>
 <td><%= customer.name %></td>
-<td><%= @donations_by_customer[customer] %></td>
+<td><%= @donations_by_customer[customer.id] %></td>
 </tr>
 
 <% end %>
