--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
       </ul>
       <ul id="secondary-nav" class="selfclear">
         <% if current_user && can?(:read, current_user) %>
-          <li class="admin"><%= link_to translate_helper("application_admin_link_text"), root_path %></li>
+          <li class="admin"><%= link_to translate_helper("application_admin_link_text"), admin_path %></li>
         <% end %>
         <% if current_user && can?(:read, Provider) %>
           <li class="vehicles-drivers-users"><%= link_to translate_helper("current_provider_settings_link_text"), provider_path(current_user.current_provider) %></li>
