Add HiddenLookupTableValue model to store hidden values per provider; Add UI and back-end to support show&hide a value

--- a/app/assets/stylesheets/v2_theme.scss
+++ b/app/assets/stylesheets/v2_theme.scss
@@ -83,3 +83,8 @@ th.fc-resourceName {
   width: auto;
   display: inline;
 }
+
+.hidden-lookup-value {
+  background-color: grey !important;
+  color: white !important;
+}
