--- a/app/views/lookup_tables/_delete_value_button.html.haml
+++ b/app/views/lookup_tables/_delete_value_button.html.haml
@@ -1,4 +1,4 @@
-= button_tag :type => 'button', id: 'deleteLookupTableValue', "data-target" => "#deleteLookupTableValueDialog", "data-toggle" => "modal", disabled: 'disabled', :class => "btn action-button" do
+= button_tag :type => 'button', id: 'deleteLookupTableValue', "data-target" => "#deleteLookupTableValueDialog", "data-toggle" => "modal", disabled: 'disabled', :class => "btn btn-danger action-button" do
   = translate_helper(:delete)
 
 - confirm_delete_message = translate_helper(:confirm_delete_message)
