Only show provider visible lookup table values: TripPurpose, TripResult, ServiceLevel, ProviderEthnicity, Mobility, and FundingSource

--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -49,7 +49,7 @@
       
       <li class="selfclear">
         <%= form.label :default_trip_purpose, translate_helper("default_trip_purpose") %>
-        <%= form.select :trip_purpose_id, TripPurpose.all.map { |tp| [tp.name, tp.id] }, :include_blank => true %>
+        <%= form.select :trip_purpose_id, TripPurpose.by_provider(current_provider).map { |tp| [tp.name, tp.id] }, :include_blank => true %>
       </li>
       
       <li class="selfclear">
