--- a/app/views/addresses/_bootstrap_form.html.haml
+++ b/app/views/addresses/_bootstrap_form.html.haml
@@ -51,7 +51,7 @@
     .col-sm-3
       = form.label :default_trip_purpose, translate_helper(:default_trip_purpose) 
     .col-sm-9
-      = form.select :trip_purpose_id, TripPurpose.all.map { |tp| [tp.name, tp.id] }, {:include_blank => true}, {class: 'form-control'}
+      = form.select :trip_purpose_id, TripPurpose.by_provider(current_provider).map { |tp| [tp.name, tp.id] }, {:include_blank => true}, {class: 'form-control'}
   .form-group.col-sm-12
     .col-sm-3
       = form.label :inactive, translate_helper(:inactive) 
