--- a/app/views/trips/_customer_panel.html.haml
+++ b/app/views/trips/_customer_panel.html.haml
@@ -17,7 +17,7 @@
       %label.col-sm-3
         = translate_helper("trip_mobility_requirements")
       .col-sm-9
-        = f.collection_select :mobility_id, @mobilities, :id, :name, {}, { class: 'form-control' }
+        = f.collection_select :mobility_id, @mobilities, :id, :name, {include_blank: true}, { class: 'form-control' }
     .form-group.col-sm-12
       %label.col-sm-3{for:"mobility_notes"}
         = translate_helper("trip_mobility_notes")
